force-app/main/default/objects/Contact/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>QCC: Created</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>