force-app/main/default/objects/Contact/fields/Override_Duplicate_Rules_System__c.field-meta.xml
<CustomField>
    <fullName>Override_Duplicate_Rules_System__c</fullName>
    <formula>$Setup.Lead_Settings__c.Bypass_Duplicate_Rule__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Override Duplicate Rules [System]</label>
    <type>Checkbox</type>
</CustomField>