force-app/main/default/objects/Contact/fields/PersonID_Resolve__c.field-meta.xml
<CustomField>
    <fullName>PersonID_Resolve__c</fullName>
    <description>PersonID Resolve</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PersonID Resolve</label>
    <length>10</length>
    <type>Text</type>
</CustomField>