force-app/main/default/objects/Contact/fields/Phone_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Phone_Country_Code__c</fullName>
    <description>Field for Data Migration</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Country Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>