force-app/main/default/objects/Contact/fields/Phone_Extension__c.field-meta.xml
<CustomField>
    <fullName>Phone_Extension__c</fullName>
    <description>Field for Data Migration</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Extension</label>
    <length>25</length>
    <type>Text</type>
</CustomField>