force-app/main/default/objects/Contact/fields/PING_ID__c.field-meta.xml
<CustomField>
    <fullName>PING_ID__c</fullName>
    <businessOwnerUser>annemary.eid@qantas.com.au.pist</businessOwnerUser>
    <description>This field is used to store the PING unique identifies for the contact.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>PING ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>