force-app/main/default/objects/Contact/fields/PNR__c.field-meta.xml
<CustomField>
    <fullName>PNR__c</fullName>
    <description>This field is used in QAC Live chat. After live chat is upgraded to messaging chat, we will delete this field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PNR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>