force-app/main/default/objects/Contact/fields/Points_Balance__c.field-meta.xml
<CustomField>
    <fullName>Points_Balance__c</fullName>
    <description>QCC: Created to show/store Contact&apos;s Frequent Flyer points balance.</description>
    <label>Points Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>