force-app/main/default/objects/Contact/fields/Position_Type__c.field-meta.xml
<CustomField>
    <fullName>Position_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Position Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>