force-app/main/default/objects/Contact/fields/Preferred_Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Contact_Method__c</fullName>
    <description>Contact preferred contact method</description>
    <label>Preferred Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Alternate</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
                <isActive>false</isActive>
                <label>Email</label>
            </value>
            <value>
                <fullName>Mail</fullName>
                <isActive>false</isActive>
                <label>Mail</label>
            </value>
            <value>
                <fullName>Phone</fullName>
                <isActive>false</isActive>
                <label>Phone</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>