force-app/main/default/objects/Contact/fields/Preferred_Email__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Email__c</fullName>
    <description>QCC: Created to show/store Preferred email address.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Preferred Email</label>
    <type>Email</type>
</CustomField>