force-app/main/default/objects/Contact/fields/Preferred_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Phone_Number__c</fullName>
    <description>QCC: Created to show/store Contact preferred phone number.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Preferred Phone Number</label>
    <type>Phone</type>
</CustomField>