force-app/main/default/objects/Contact/fields/Profile_Address__c.field-meta.xml
<CustomField>
    <fullName>Profile_Address__c</fullName>
    <description>Address of a Contact from Profile</description>
    <formula>Profile_Mailing_Street__c &amp; &quot; &quot; &amp;  Profile_MailingCity__c &amp; &quot; &quot; &amp;  Profile_MailingState__c &amp; &quot; &quot; &amp;  Profile_MailingPostalCode__c &amp; &quot; &quot; &amp;   Profile_MailingCountry__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile Address</label>
    <type>Text</type>
</CustomField>