force-app/main/default/objects/Contact/fields/Profile_Ass_Partner_Number__c.field-meta.xml
<CustomField>
    <fullName>Profile_Ass_Partner_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Associated Partner Number</label>
    <type>TextArea</type>
</CustomField>