force-app/main/default/objects/Contact/fields/Profile_Communication_Selection__c.field-meta.xml
<CustomField>
    <fullName>Profile_Communication_Selection__c</fullName>
    <label>Communication Method Selection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>