force-app/main/default/objects/Contact/fields/Profile_Dom_Meal_Text_Authority__c.field-meta.xml
<CustomField>
    <fullName>Profile_Dom_Meal_Text_Authority__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Domestic Meal Preference Details</label>
    <type>TextArea</type>
</CustomField>