force-app/main/default/objects/Contact/fields/Profile_Edu_Qual__c.field-meta.xml
<CustomField>
    <fullName>Profile_Edu_Qual__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Education Qualifications</label>
    <type>TextArea</type>
</CustomField>