force-app/main/default/objects/Contact/fields/Profile_Email__c.field-meta.xml
<CustomField>
    <fullName>Profile_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Profile Email</label>
    <length>150</length>
    <type>Text</type>
</CustomField>