force-app/main/default/objects/Contact/fields/Profile_FF_Flag__c.field-meta.xml
<CustomField>
    <fullName>Profile_FF_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Frequent Flyer Member</label>
    <type>Checkbox</type>
</CustomField>