force-app/main/default/objects/Contact/fields/Profile_FF_Join_Date__c.field-meta.xml
<CustomField>
    <fullName>Profile_FF_Join_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Frequent Flyer Join Date</label>
    <type>Date</type>
</CustomField>