force-app/main/default/objects/Contact/fields/Profile_FF_Marketing_Mail__c.field-meta.xml
<CustomField>
    <fullName>Profile_FF_Marketing_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Frequent Flyer Marketing Mail</label>
    <type>Checkbox</type>
</CustomField>