force-app/main/default/objects/Contact/fields/Profile_FF_Statement__c.field-meta.xml
<CustomField>
    <fullName>Profile_FF_Statement__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Frequent Flyer Statement &amp; Newsletter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>