force-app/main/default/objects/Contact/fields/Profile_Int_Seat_Pref__c.field-meta.xml
<CustomField>
    <fullName>Profile_Int_Seat_Pref__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>International Seat Preference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>