force-app/main/default/objects/Contact/fields/Profile_Loyalty_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Profile_Loyalty_Scheme__c</fullName>
    <label>Other Loyalty Scheme</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NZ</fullName>
            </value>
            <value>
                <fullName>SQ</fullName>
            </value>
            <value>
                <fullName>CX</fullName>
            </value>
            <value>
                <fullName>UA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>