force-app/main/default/objects/Contact/fields/Profile_Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Profile_Mailing_Street__c</fullName>
    <description>This field holds street address of a Contact from Profile Integration</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Profile Mailing Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>