force-app/main/default/objects/Contact/fields/Profile_MailingCity__c.field-meta.xml
<CustomField>
    <fullName>Profile_MailingCity__c</fullName>
    <description>This field holds CITY Information of a Contact from Profile Integration</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Profile Mailing City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>