force-app/main/default/objects/Contact/fields/Profile_MailingCountry__c.field-meta.xml
<CustomField>
    <fullName>Profile_MailingCountry__c</fullName>
    <description>This field holds Country Code Information of a Contact from Profile Integration</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Profile Mailing Country</label>
    <length>5</length>
    <type>Text</type>
</CustomField>