force-app/main/default/objects/Contact/fields/Profile_MailingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>Profile_MailingPostalCode__c</fullName>
    <description>This field holds ZIP/Postal Code Information of a Contact from Profile Integration</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Profile Mailing Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>