force-app/main/default/objects/Contact/fields/Profile_MailingState__c.field-meta.xml
<CustomField>
    <fullName>Profile_MailingState__c</fullName>
    <description>This field holds STATE Information of a Contact from Profile Integration</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Profile Mailing State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>