force-app/main/default/objects/Contact/fields/Profile_Membership_Active_Flag__c.field-meta.xml
<CustomField>
    <fullName>Profile_Membership_Active_Flag__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Active Membership</label>
    <length>255</length>
    <type>Text</type>
</CustomField>