force-app/main/default/objects/Contact/fields/Profile_Membership_Customer_Type_Desc__c.field-meta.xml
<CustomField>
    <fullName>Profile_Membership_Customer_Type_Desc__c</fullName>
    <description>CRM-9670 This field holds value of Frequent Flyer&apos;s Level Description if frequent flyer number exists.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Membership Customer Type Description</label>
    <type>TextArea</type>
</CustomField>