force-app/main/default/objects/Contact/fields/Profile_Partner_FF_Scheme_Code__c.field-meta.xml
<CustomField>
    <fullName>Profile_Partner_FF_Scheme_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Partner Frequent Flyer Scheme Code</label>
    <type>TextArea</type>
</CustomField>