force-app/main/default/objects/Contact/fields/Profile_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Profile_Phone_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Profile Phone Number</label>
    <type>Phone</type>
</CustomField>