force-app/main/default/objects/Contact/fields/Profile_QC_Flag__c.field-meta.xml
<CustomField>
    <fullName>Profile_QC_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Qantas Club Member</label>
    <type>Checkbox</type>
</CustomField>