force-app/main/default/objects/Contact/fields/Profile_Trav_Pref_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Profile_Trav_Pref_Reasons__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Travel Preferences Reasons</label>
    <type>TextArea</type>
</CustomField>