force-app/main/default/objects/Contact/fields/QAC_Contact__c.field-meta.xml
<CustomField>
    <fullName>QAC_Contact__c</fullName>
    <description>Used to Identify QAC Manager Contacts</description>
    <label>QAC Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>