force-app/main/default/objects/Contact/fields/QCC_AFLTeams__c.field-meta.xml
<CustomField>
    <fullName>QCC_AFLTeams__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AFL Teams</label>
    <length>255</length>
    <type>Text</type>
</CustomField>