force-app/main/default/objects/Contact/fields/QCC_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>QCC_Company_Name__c</fullName>
    <description>Value comes from the Loyalty platform event</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>