force-app/main/default/objects/Contact/fields/QCC_Contact_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>QCC_Contact_Full_Name__c</fullName>
    <formula>IF(NOT(ISBLANK(Preferred_Name__c )),TEXT(Salutation ) &amp;&quot; &quot;&amp; FirstName&amp; &quot; &quot; &amp; LastName &amp; &quot; (&quot; &amp; Preferred_Name__c &amp;&quot;)&quot;, TEXT(Salutation ) &amp;&quot; &quot;&amp; FirstName&amp; &quot; &quot; &amp; LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Full Name</label>
    <type>Text</type>
</CustomField>