force-app/main/default/objects/Contact/fields/QCC_Effective_Tier__c.field-meta.xml
<CustomField>
    <fullName>QCC_Effective_Tier__c</fullName>
    <description>Value comes from the Loyalty platform event which reflects the customer&apos;s effective tier</description>
    <label>Effective Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FFLP</fullName>
                <label>Lifetime Platinum</label>
            </value>
            <value>
                <fullName>CLPO</fullName>
                <label>Chairmans Lounge Platinum One</label>
            </value>
            <value>
                <fullName>FFBR</fullName>
                <label>Frequent Flyer Bronze</label>
            </value>
            <value>
                <fullName>FFSL</fullName>
                <label>Frequent Flyer Silver</label>
            </value>
            <value>
                <fullName>FFGD</fullName>
                <label>Frequent Flyer Gold</label>
            </value>
            <value>
                <fullName>FFPL</fullName>
                <label>Frequent Flyer Platinum</label>
            </value>
            <value>
                <fullName>FFPO</fullName>
                <label>Platinum One</label>
            </value>
            <value>
                <fullName>CLQF</fullName>
                <label>Chairmans Lounge</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>