force-app/main/default/objects/Contact/fields/QCC_EventCities__c.field-meta.xml
<CustomField>
    <fullName>QCC_EventCities__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Event Cities</label>
    <length>255</length>
    <type>Text</type>
</CustomField>