force-app/main/default/objects/Contact/fields/QCC_ExclusiveEventsAndExperiencesInvite__c.field-meta.xml
<CustomField>
    <fullName>QCC_ExclusiveEventsAndExperiencesInvite__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Exclusive Events And Experiences Invite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>