force-app/main/default/objects/Contact/fields/QCC_FamilyFriendlyEventInvite__c.field-meta.xml
<CustomField>
    <fullName>QCC_FamilyFriendlyEventInvite__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Family Friendly Event Invite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>