force-app/main/default/objects/Contact/fields/QCC_FashionAndDesigns__c.field-meta.xml
<CustomField>
    <fullName>QCC_FashionAndDesigns__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fashion And Designs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>