force-app/main/default/objects/Contact/fields/QCC_FavoriteArtist__c.field-meta.xml
<CustomField>
    <fullName>QCC_FavoriteArtist__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Favorite Artist</label>
    <length>255</length>
    <type>Text</type>
</CustomField>