force-app/main/default/objects/Contact/fields/QCC_Frequent_Flyer_Anniversary_Date__c.field-meta.xml
<CustomField>
    <fullName>QCC_Frequent_Flyer_Anniversary_Date__c</fullName>
    <description>QCC: (QDCUSCON-865) Created to show Frequent Flyer Anniversary Date.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Frequent Flyer Anniversary Date</label>
    <type>Date</type>
</CustomField>