force-app/main/default/objects/Contact/fields/QCC_Frequent_Flyer_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>QCC_Frequent_Flyer_Expiry_Date__c</fullName>
    <description>Value comes from the Loyalty platform event. Together with the status credits value, this is used to determine when to create a Potential Downgrade case</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Frequent Flyer Expiry Date</label>
    <type>Date</type>
</CustomField>