force-app/main/default/objects/Contact/fields/QCC_InviteToEventDuringTravel__c.field-meta.xml
<CustomField>
    <fullName>QCC_InviteToEventDuringTravel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Invite To Event During Travel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>