force-app/main/default/objects/Contact/fields/QCC_Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>QCC_Last_Activity_Date__c</fullName>
    <description>Automatically set to the current date when a task or event is created. Used as reference to determine the most recent last activity date.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Activity Date</label>
    <type>Date</type>
</CustomField>