force-app/main/default/objects/Contact/fields/QCC_Last_Flight_Date__c.field-meta.xml
<CustomField>
    <fullName>QCC_Last_Flight_Date__c</fullName>
    <description>Value comes from Pre-Departure platform event. This is used as a reference date after x number of days on when to create &quot;No Fly Health Check&quot; case.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Flight Date</label>
    <type>Date</type>
</CustomField>