force-app/main/default/objects/Contact/fields/QCC_LoyaltyBonus_Channel__c.field-meta.xml
<CustomField>
    <fullName>QCC_LoyaltyBonus_Channel__c</fullName>
    <description>Value comes from the Loyalty platform event when customer opts out for the bonus notification</description>
    <inlineHelpText>Customers with a None value, have selected to not receive bonus reward notifications.</inlineHelpText>
    <label>Loyalty Bonus Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
                <default>true</default>
                <label>SMS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>