force-app/main/default/objects/Contact/fields/QCC_Management_Profile__c.field-meta.xml
<CustomField>
    <fullName>QCC_Management_Profile__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Qantas management who have been given a complimentary status</inlineHelpText>
    <label>Management Profile</label>
    <type>TextArea</type>
</CustomField>