force-app/main/default/objects/Contact/fields/QCC_On_Watchlist__c.field-meta.xml
<CustomField>
    <fullName>QCC_On_Watchlist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Watchlist</label>
    <type>Checkbox</type>
</CustomField>