force-app/main/default/objects/Contact/fields/QCC_Other_Email__c.field-meta.xml
<CustomField>
    <fullName>QCC_Other_Email__c</fullName>
    <description>Qcc Other Email</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Email</label>
    <type>Email</type>
</CustomField>