force-app/main/default/objects/Contact/fields/QCC_Preferred_Address__c.field-meta.xml
<CustomField>
    <fullName>QCC_Preferred_Address__c</fullName>
    <label>Preferred Address</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>