force-app/main/default/objects/Contact/fields/QCC_Preferred_Contact_Channel__c.field-meta.xml
<CustomField>
    <fullName>QCC_Preferred_Contact_Channel__c</fullName>
    <description>Value comes from the Loyalty platform event reflecting customer&apos;s preference for day-prior contact</description>
    <inlineHelpText>Customer&apos;s preference for day-prior contact</inlineHelpText>
    <label>Preferred VIP Service Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>