force-app/main/default/objects/Contact/fields/QCC_Previous_Frequent_Flyer__c.field-meta.xml
<CustomField>
    <fullName>QCC_Previous_Frequent_Flyer__c</fullName>
    <label>QCC Previous Frequent Flyer Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Non-tiered</fullName>
            </value>
            <value>
                <fullName>CLPO</fullName>
                <label>Chairmans Lounge Platinum One</label>
            </value>
            <value>
                <fullName>FFPL</fullName>
                <label>Platinum</label>
            </value>
            <value>
                <fullName>FFPO</fullName>
                <label>Platinum One</label>
            </value>
            <value>
                <fullName>CLQF</fullName>
                <label>Chairmans Lounge</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>