force-app/main/default/objects/Contact/fields/QCC_Previous_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>QCC_Previous_Last_Activity__c</fullName>
    <description>Use in QCC quarterly health check (process builder)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous Last Activity</label>
    <type>Date</type>
</CustomField>