force-app/main/default/objects/Contact/fields/QCC_Previous_Last_Flight_Date__c.field-meta.xml
<CustomField>
    <fullName>QCC_Previous_Last_Flight_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous Last Flight Date</label>
    <type>Date</type>
</CustomField>