force-app/main/default/objects/Contact/fields/QCC_Qantas_Host_Always_Call__c.field-meta.xml
<CustomField>
    <fullName>QCC_Qantas_Host_Always_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Qantas Host Always Call</label>
    <type>Checkbox</type>
</CustomField>