force-app/main/default/objects/Contact/fields/QCC_Qantas_Status_Credits__c.field-meta.xml
<CustomField>
    <fullName>QCC_Qantas_Status_Credits__c</fullName>
    <description>Value comes from the Loyalty platform event. Together with the status credits value and Frequent Flyer Expiry Date, this is used to determine when to create a Potential Downgrade case.</description>
    <label>Qantas Status Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>