force-app/main/default/objects/Contact/fields/QCC_Recent_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>QCC_Recent_Activity_Date__c</fullName>
    <description>Formula that gets the latest activity date between custom QCC_Last_Activity_Date__c and standard LastActivityDate. This is used as a reference date after x number of days on when to create &quot;Quarterly Health Check&quot; case.</description>
    <formula>IF(  ISNULL(LastActivityDate)  &amp;&amp; NOT( ISNULL(QCC_Last_Activity_Date__c)), QCC_Last_Activity_Date__c, 
	IF( ISNULL(QCC_Last_Activity_Date__c)  &amp;&amp; NOT( ISNULL(LastActivityDate)),  LastActivityDate ,
		IF( QCC_Last_Activity_Date__c &gt;=  LastActivityDate,QCC_Last_Activity_Date__c, LastActivityDate  )
		
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Activity Date</label>
    <type>Date</type>
</CustomField>