force-app/main/default/objects/Contact/fields/QCC_RugbyLeagueTeams__c.field-meta.xml
<CustomField>
    <fullName>QCC_RugbyLeagueTeams__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rugby League Teams</label>
    <length>255</length>
    <type>Text</type>
</CustomField>