force-app/main/default/objects/Contact/fields/QCC_SleepSoonerPreference__c.field-meta.xml
<CustomField>
    <fullName>QCC_SleepSoonerPreference__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sleep Sooner Preference</label>
    <type>Checkbox</type>
</CustomField>