force-app/main/default/objects/Contact/fields/QCC_SleepSuiteSizeFirst__c.field-meta.xml
<CustomField>
    <fullName>QCC_SleepSuiteSizeFirst__c</fullName>
    <description>Value comes from the Loyalty platform event reflecting the customer&apos;s first class pajama size</description>
    <encryptionScheme>None</encryptionScheme>
    <label>First Sleep Suite Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>