force-app/main/default/objects/Contact/fields/QCC_SMS_for_5000_Sent__c.field-meta.xml
<CustomField>
    <fullName>QCC_SMS_for_5000_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The flag to determine if the 5000 Loyalty Status message mark has been sent.</description>
    <inlineHelpText>The flag to determine if the 5000 Loyalty Status message mark has been sent.</inlineHelpText>
    <label>SMS for 5000 Sent?</label>
    <type>Checkbox</type>
</CustomField>