force-app/main/default/objects/Contact/fields/QCC_Status_credits_till_next_Level__c.field-meta.xml
<CustomField>
    <fullName>QCC_Status_credits_till_next_Level__c</fullName>
    <description>QCC: (QDCUSCON-865) Created to store status credits till next level.</description>
    <label>Status credits till next Level</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>