force-app/main/default/objects/Contact/fields/QCC_SuperRugbyTeams__c.field-meta.xml
<CustomField>
    <fullName>QCC_SuperRugbyTeams__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Super Rugby Teams</label>
    <length>255</length>
    <type>Text</type>
</CustomField>