force-app/main/default/objects/Contact/fields/QCC_TECH_BusinessPhoneAreaCode__c.field-meta.xml
<CustomField>
    <fullName>QCC_TECH_BusinessPhoneAreaCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Phone Area Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>