force-app/main/default/objects/Contact/fields/QCC_TECH_FF_Number_External_Id__c.field-meta.xml
<CustomField>
    <fullName>QCC_TECH_FF_Number_External_Id__c</fullName>
    <description>Used for enforcing uniqueness of Frequent Flyer Number within the B2B and B2C space separately.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>QCC TECH FF Number External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>